stylesheets/stylesheet.css
/*******************************************************************************
Modified Slate Theme for GitHub Pages
(original by Jason Costello, @jsncostello)
*******************************************************************************/

@import url(pygment_trac.css);

/*******************************************************************************
MeyerWeb Reset
*******************************************************************************/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font: inherit;
	vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}

ol, ul {
	list-style: none;
}

blockquote, q {
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

a:focus {
	outline: none;
}

/*******************************************************************************
Theme Styles
*******************************************************************************/

body {
	background-color: rgb(255, 255, 255);
	background-attachment: fixed;
	padding: 20px 20px 40px 20px;
	margin:0;

	box-sizing: border-box;
	color:#373737;
	font-size: 16px;
	font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
	line-height: 1.5;
	-webkit-font-smoothing: antialiased;
}

h1, h2, h3, h4, h5, h6 {
	margin: 10px 0;
	font-weight: 700;
	color:#222222;
	font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
	letter-spacing: -1px;
}

h1 {
	font-size: 36px;
	font-weight: 700;
}

h2 {
	padding-bottom: 10px;
	font-size: 32px;
	background: url('../images/bg_hr.png') repeat-x bottom;
}

h3 {
	font-size: 24px;
}

h4 {
	font-size: 21px;
}

h5 {
	font-size: 18px;
}

h6 {
	font-size: 16px;
}

p {
	margin: 10px 0 15px 0;
}

footer p {
	color: #f2f2f2;
	margin: 10px 0;
}

a {
	text-decoration: none;
	color: #007edf;
	text-shadow: none;

	transition: color 0.5s ease;
	transition: text-shadow 0.5s ease;
	-webkit-transition: color 0.5s ease;
	-webkit-transition: text-shadow 0.5s ease;
	-moz-transition: color 0.5s ease;
	-moz-transition: text-shadow 0.5s ease;
	-o-transition: color 0.5s ease;
	-o-transition: text-shadow 0.5s ease;
	-ms-transition: color 0.5s ease;
	-ms-transition: text-shadow 0.5s ease;
}

#main_content a:hover {
	color: #0069ba;
	text-shadow: #0090ff 0px 0px 2px;
}

footer a:hover {
	color: #43adff;
	text-shadow: #0090ff 0px 0px 2px;
}

em {
	font-style: italic;
}

strong {
	font-weight: bold;
}

img {
	position: relative;
	margin: 0 auto;
	max-width: 739px;
	padding: 5px;
	margin: 10px 0 10px 0;
	border: 1px solid #ebebeb;

	box-shadow: 0 0 5px #ebebeb;
	-webkit-box-shadow: 0 0 5px #ebebeb;
	-moz-box-shadow: 0 0 5px #ebebeb;
	-o-box-shadow: 0 0 5px #ebebeb;
	-ms-box-shadow: 0 0 5px #ebebeb;
}

pre, code {
	width: 100%;
	color: #222;
	background-color: #fff;

	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
	font-size: 14px;

	border-radius: 2px;
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;



}

pre {
	width: 100%;
	padding: 10px;
	box-shadow: 0 0 10px rgba(0,0,0,.1);
	overflow: auto;
}

code {
	padding: 3px;
	margin: 0 3px;
	box-shadow: 0 0 10px rgba(0,0,0,.1);
}

pre code {
	display: block;
	box-shadow: none;
}

blockquote {
	color: #666;
	margin-bottom: 20px;
	padding: 0 0 0 20px;
	border-left: 3px solid #bbb;
}

ul, ol, dl {
	margin-bottom: 15px
}

ul li {
	list-style: inside;
	padding-left: 20px;
}

ol li {
	list-style: decimal inside;
	padding-left: 20px;
}

dl dt {
	font-weight: bold;
}

dl dd {
	padding-left: 20px;
	font-style: italic;
}

dl p {
	padding-left: 20px;
	font-style: italic;
}

hr {
	height: 1px;
	margin-bottom: 5px;
	border: none;
	background: url('../images/bg_hr.png') repeat-x center;
}

table {
	border: 1px solid #373737;
	margin-bottom: 20px;
	text-align: left;
 }

th {
	font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
	padding: 10px;
	background: #373737;
	color: #fff;
 }

td {
	padding: 10px;
	border: 1px solid #373737;
 }

form {
	background: #f2f2f2;
	padding: 20px;
}

img {
	width: 100%;
	max-width: 100%;
}

/*******************************************************************************
Full-Width Styles
*******************************************************************************/

.outer {
	margin: auto;
	width: 800px;
}

.inner {
	position: relative;
	max-width: 640px;
	padding: 20px 10px;
	margin: auto;
}

#forkme_banner {
	border-bottom-right-radius: 25px;
	border-top-right-radius: 25px;
	border-top-left-radius: 5px;
	border-bottom-left-radius: 5px;
	-webkit-box-shadow: 0 0 10px rgba(0,0,0,.5);
	box-shadow: 0 0 10px rgba(0,0,0,.5);

	display: block;
	position: absolute;
	top:20px;
	right: 0px;
	z-index: 10;
	padding: 10px 50px 10px 15px;
	color: #fff;
	background: url('../images/blacktocat.png') rgb(14, 123, 206) no-repeat 95% 50%;
	font-weight: 700;
}
#forkme_banner:hover {
	-webkit-transition: background-color .5s;
	-moz-transition: background-color .5s;
	-o-transition: background-color .5s;
	-ms-transition: background-color .5s;
	transition: background-color .5s;
	background-color: #0090ff;
}
.red-background #forkme_banner{
	background-color: #c43;
}
.red-background #forkme_banner:hover{
	background-color: #E2503E;
}
.blue-background #forkme_banner{
	background-color: #27c;
}
.blue-background #forkme_banner:hover{
	background-color: #2A81D8;
}
.green-background #forkme_banner{
	background-color: #079707;
}
.green-background #forkme_banner:hover{
	background-color: #09AC09;
}
.yellow-background #forkme_banner{
	background-color: #D3911B;
}
.yellow-background #forkme_banner:hover{
	background-color: #DF9D27;
}



#header_wrap {
	background: -webkit-linear-gradient(top, #373737, #212121);
	background: -moz-linear-gradient(top, #373737, #212121);
	background: -o-linear-gradient(top, #373737, #212121);
	background: -ms-linear-gradient(top, #373737, #212121);
	background: linear-gradient(top, #373737, #212121);
	border-radius: 25px 25px 0 0;
	-webkit-box-shadow: 0px 0px 3px 1px rgba(0,0,0,.5);
	box-shadow: 0px 0px 3px 1px rgba(0,0,0,.5);

}

#header_wrap .inner {
	padding: 50px 10px 30px 10px;
}

#project_title {
	margin: 0;
	color: #fff;
	font-size: 42px;
	font-weight: 700;
	text-shadow: #111 0px 0px 10px;
}

#project_tagline {
	color: #fff;
	font-size: 24px;
	font-weight: 300;
	background: none;
	text-shadow: #111 0px 0px 10px;
}

/* disabled */
#downloads {
	display: none;
	position: absolute;
	width: 210px;
	z-index: 10;
	bottom: -40px;
	right: 0;
	height: 70px;
	background: url('../images/icon_download.png') no-repeat 0% 90%;
}
.zip_download_link,
.tar_download_link {
	-webkit-transition: background .3s;
	 -moz-transition: background .3s;
		-ms-transition: background .3s;
		 -o-transition: background .3s;
			transition: background .3s;

}
.zip_download_link {

	display: block;
	float: right;
	width: 90px;
	height:70px;
	text-indent: -5000px;
	overflow: hidden;
	background: url(../images/sprite_download.png) no-repeat bottom left;
}

.tar_download_link {

	display: block;
	float: right;
	width: 90px;
	height:70px;
	text-indent: -5000px;
	overflow: hidden;
	background: url(../images/sprite_download.png) no-repeat bottom right;
	margin-left: 10px;
}

.zip_download_link:hover {
	background: url(../images/sprite_download.png) no-repeat top left;
}

.tar_download_link:hover {
	background: url(../images/sprite_download.png) no-repeat top right;
}

#main_content_wrap {
	background: #f2f2f2;
	border-top: 1px solid #111;
	border-bottom: 1px solid #111;
	box-shadow: 0px 0px 1px 1px rgba(0,0,0,.2);
}

#main_content {
	min-height:525px;
	padding-top: 40px;
}

#footer_wrap {
	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
	filter: alpha(opacity=90);
	opacity: .9;

	background: #212121;
	border-radius: 0 0 25px 25px;
	box-shadow: 0px 0px 3px 1px rgba(0,0,0,.5);
}



/*******************************************************************************
Small Device Styles
*******************************************************************************/

@media screen and (max-width: 480px) {
	body {
	font-size:14px;
	}

	#downloads {
	display: none;
	}

	.inner {
	min-width: 320px;
	max-width: 480px;
	}

	#project_title {
	font-size: 32px;
	}

	h1 {
	font-size: 28px;
	}

	h2 {
	font-size: 24px;
	}

	h3 {
	font-size: 21px;
	}

	h4 {
	font-size: 18px;
	}

	h5 {
	font-size: 14px;
	}

	h6 {
	font-size: 12px;
	}

	code, pre {
	min-width: 320px;
	max-width: 480px;
	font-size: 11px;
	}

}

